--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 		<div class="pane">
 			<div class="preview-container">
-				
+				<div id="preview" class="preview"></div>
 			</div>
 
 			<div class="btn-container">
