--- a/text.html
+++ b/text.html
@@ -13,7 +13,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 
 		<!-- Scripts -->
-		<script src="scripts/gomimaro.js"></script>
+		<script src="scripts/gomimaro-rel.js"></script>
 
 		<!-- Styles -->
 		<link rel="stylesheet" href="stylesheets/gomimaro/gomimaro.css">
@@ -25,7 +25,7 @@
 	</head>
 
 	<body style="width: 100vw; height: 100vh; padding: 0; margin: 0;">
-		<div class="gomimaro-container">
+		<div class="gomimaro-container" style="background: salmon;">
 			<div class="gomimaro-column gomimaro-msg-base">
 				<div class="gomimaro-msg-frame">
 					<span class="gomimaro-msg">
