--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<meta charset="utf-8" />
 
 	<!-- External Fonts -->
-	<link rel="stylesheet" href="stylesheets/fonts/jp-fonts.css" async="true">
-	<link rel="stylesheet" href="stylesheets/fonts/en-fonts.css" async="true">
+	<link rel="stylesheet" href="stylesheets/fonts/jp-fonts.css">
+	<link rel="stylesheet" href="stylesheets/fonts/en-fonts.css">
 
 	<!-- API -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
@@ -25,6 +25,7 @@
 
 
 	<!-- Others -->
+	<link rel="icon" href="src/images/png/rounded_paper_64.png">
 	<title>
 		Gomimaro Maker
 	</title>
