--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 	<meta charset="utf-8" />
 
 	<!-- External Fonts -->
-	<link rel="stylesheet" href="stylesheets/fonts/jp-fonts.css">
-	<link rel="stylesheet" href="stylesheets/fonts/en-fonts.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link
+		href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&family=Noto+Serif+JP:wght@200..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+		rel="stylesheet">
 
 	<!-- API -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
