--- a/index.html
+++ b/index.html
@@ -48,10 +48,21 @@
 			<input id="hue" class="hue-range" type="range" value="120" min="0" max="255" step="1">
 			<input id="saturation" class="hue-range" type="range" value="75" min="0" max="100" step="0.1">
 			<input id="lightness" class="hue-range" type="range" value="85" min="0" max="100" step="0.1">
-			<textarea id="msg" class="msg-editor" rows="30"></textarea>
-			<button id="btn-gen" class="text-btn">
-				生成
-			</button>
+			<textarea id="msg" class="msg-editor" rows="6"></textarea>
+			
+			<div class="btn-container">
+				<button id="btn-reset" class="text-btn">
+					リセット
+				</button>
+
+				<button id="btn-gen" class="text-btn">
+					生成
+				</button>
+
+				<button id="btn-clear" class="text-btn">
+					クリア
+				</button>
+			</div>
 		</div>
 
 		<div class="pane">
